Wrap `pre` correctly
`word(overflow)-wrap: break-word` does not work on Firefox 30.

--- a/_core.scss
+++ b/_core.scss
@@ -98,6 +98,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   -moz-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
+  white-space: pre-wrap;
   word-wrap: break-word;
   overflow-wrap: break-word;
 
